# MeasureTime

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  doDebugBuild.sh  doDebugBuild4Msys2.bat
cpp/example/: CMakeLists.txt  main.cpp
cpp/lib/: CMakeLists.txt
cpp/lib/include/: AutoCloseable.h  MeasurementReport.h  MeasurementResult.h  MeasurementResultCollectable.h  StopWatch.h
cpp/lib/src/: AutoCloseable.cpp  MeasurementReport.cpp  MeasurementResult.cpp  StopWatch.cpp
cpp/tests/: CMakeLists.txt  test_MeasurementResult.cpp  test_StopWatch.cpp
